# solana-vault-standard

./: .gitignore  Anchor.toml  CHANGELOG.md  PLAN.md  README.md  SUBMISSION.md  package.json
.claude/: settings.json
docs/: ARCHITECTURE.md  CLI.md  CONSTANTS.md  MODULES.md  README.md  SVS-10.md  SVS-11.md  SVS-12.md  SVS-5.md  SVS-6.md  TESTING.md  fix-SVS2.md  specs-SVS05.md  specs-SVS06.md  specs-SVS07.md  specs-SVS08.md  specs-SVS09.md  specs-SVS10.md  specs-SVS11.md  specs-SVS12.md  specs-modules.md
docs/plans/: 2026-03-10-svs-10-async-vault.md
modules/svs-module-hooks/src/: hooks.rs
programs/mock-oracle/: Cargo.toml
programs/mock-oracle/src/: lib.rs
programs/mock-sas/: Cargo.toml
programs/mock-sas/src/: lib.rs
programs/svs-1/src/instructions/: deposit.rs  mint.rs  redeem.rs  withdraw.rs
programs/svs-10/: Cargo.toml
programs/svs-10/src/: constants.rs  error.rs  events.rs  lib.rs  math.rs  state.rs
programs/svs-10/src/instructions/: admin.rs  cancel_deposit.rs  cancel_redeem.rs  claim_deposit.rs  claim_redeem.rs  fulfill_deposit.rs  fulfill_redeem.rs  initialize.rs  mod.rs  module_admin.rs  request_deposit.rs  request_redeem.rs  set_operator.rs  view.rs
programs/svs-11/: Cargo.toml
programs/svs-11/src/: attestation.rs  constants.rs  error.rs  events.rs  lib.rs  math.rs  oracle.rs  state.rs
programs/svs-11/src/instructions/: admin.rs  approve_deposit.rs  approve_redeem.rs  cancel_deposit.rs  cancel_redeem.rs  claim_deposit.rs  claim_redeem.rs  compliance.rs  draw_down.rs  initialize_pool.rs  investment_window.rs  mod.rs  module_admin.rs  reject_deposit.rs  reject_redeem.rs  repay.rs  request_deposit.rs  request_redeem.rs
programs/svs-12/: Cargo.toml  keypair.json
programs/svs-12/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs  waterfall.rs
programs/svs-12/src/instructions/: add_tranche.rs  admin.rs  deposit.rs  distribute_yield.rs  initialize.rs  mod.rs  module_admin.rs  rebalance.rs  record_loss.rs  redeem.rs  update_tranche_config.rs  view.rs
programs/svs-2/src/instructions/: deposit.rs  mint.rs  redeem.rs  withdraw.rs
programs/svs-3/src/: lib.rs
programs/svs-3/src/instructions/: deposit.rs  mint.rs  redeem.rs  withdraw.rs
programs/svs-4/src/: lib.rs
programs/svs-4/src/instructions/: deposit.rs  mint.rs  redeem.rs  withdraw.rs
programs/svs-5/: Cargo.toml
programs/svs-5/src/: constants.rs  error.rs  lib.rs  module_hooks.rs  state.rs
programs/svs-5/src/instructions/: admin.rs  checkpoint.rs  deposit.rs  distribute_yield.rs  initialize.rs  mint.rs  module_admin.rs  redeem.rs  view.rs  withdraw.rs
programs/svs-6/: Cargo.toml
programs/svs-6/src/: lib.rs  state.rs
programs/svs-6/src/instructions/: admin.rs  apply_pending.rs  configure_account.rs  deposit.rs  initialize.rs  mint.rs  module_admin.rs  redeem.rs  view.rs  withdraw.rs
programs/svs-7/: Cargo.toml
programs/svs-7/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/svs-7/src/instructions/: admin.rs  deposit_sol.rs  deposit_wsol.rs  initialize.rs  mint_sol.rs  mint_wsol.rs  mod.rs  module_admin.rs  redeem_sol.rs  redeem_wsol.rs  view.rs  withdraw_sol.rs  withdraw_wsol.rs
programs/svs-9/: Cargo.toml
programs/svs-9/src/: constants.rs  error.rs  events.rs  lib.rs  math.rs  state.rs  utils.rs
programs/svs-9/src/instructions/: add_child.rs  admin.rs  allocate.rs  deallocate.rs  deposit.rs  harvest.rs  initialize.rs  mint.rs  mod.rs  module_admin.rs  rebalance.rs  redeem.rs  remove_child.rs  update_weights.rs  view.rs  withdraw.rs
scripts/: e2e-svs10-devnet.ts  e2e-svs11-devnet.ts  e2e-svs12-devnet.ts
scripts/shared/: common-helpers.ts
scripts/svs-10/: basic.ts  cancel-expiration.ts  edge-cases.ts  full-drain.ts  helpers.ts  inflation-attack.ts  multi-user.ts  operator-delegation.ts  oracle-pricing.ts  slippage.ts  view-functions.ts
scripts/svs-11/: basic.ts  compliance.ts  credit-ops.ts  edge-cases.ts  helpers.ts  kyc-attestation.ts  oracle-pricing.ts
scripts/svs-12/: admin.ts  basic.ts  edge-cases.ts  helpers.ts  inflation-attack.ts  loss-rebalance.ts  multi-user.ts
scripts/svs-5/: basic.ts  edge-cases.ts  full-drain.ts  helpers.ts  inflation-attack.ts  live-balance.ts  multi-user.ts  slippage.ts  view-functions.ts  withdraw-mint.ts
scripts/svs-6/: helpers.ts
scripts/svs-9/: README.md  deallocate.ts  deposit.ts  harvest.ts  helpers.ts  redeem.ts
sdk/core/: package.json
sdk/core/src/: async-vault-pda.ts  async-vault.ts  credit-vault-pda.ts  credit-vault.ts  index.ts  strategy.ts  streaming-vault.ts  svs9.ts  tranched-vault-pda.ts  tranched-vault.ts
sdk/core/src/cli/: index.ts  types.ts
sdk/core/src/cli/commands/async/: cancel-deposit.ts  (+9 more)
sdk/core/tests/: async-vault-pda.test.ts  async-vault.test.ts  strategy.test.ts
sdk/privacy/src/: confidential-stream-vault.ts  types.ts
tests/: modules.ts  svs-10.ts  svs-11-sdk.ts  svs-11.ts  svs-12-sdk.ts  svs-12.ts  svs-3.ts  svs-5.ts  svs-7.ts  svs-9-e2e.ts  svs-9.ts
trident-tests/: Cargo.toml  Trident.toml
trident-tests/fuzz_4/: fuzz_accounts.rs  test_fuzz.rs  types.rs
trident-tests/fuzz_5/: fuzz_accounts.rs  test_fuzz.rs
trident-tests/fuzz_6/: fuzz_accounts.rs  test_fuzz.rs
trident-tests/fuzz_svs5/: test_fuzz.rs
(+30 files in other folders)
