[package]
name = "svs-10"
version = "0.1.0"
description = "SVS-10: Solana Vault Standard - Async vault with request/fulfill/claim lifecycle (ERC-7540 equivalent)"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "svs_10"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
modules = ["svs-module-hooks", "svs-fees", "svs-caps", "svs-locks", "svs-access", "svs-rewards"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "metadata"] }
spl-token-2022 = "6.0.0"
svs-math = { path = "../../modules/svs-math" }
svs-oracle = { path = "../../modules/svs-oracle" }
# Optional module dependencies
svs-fees = { path = "../../modules/svs-fees", optional = true }
svs-caps = { path = "../../modules/svs-caps", optional = true }
svs-locks = { path = "../../modules/svs-locks", optional = true }
svs-access = { path = "../../modules/svs-access", optional = true }
svs-rewards = { path = "../../modules/svs-rewards", optional = true }
svs-module-hooks = { path = "../../modules/svs-module-hooks", optional = true }
