[package]
name = "svs-11"
version = "0.1.0"
description = "SVS-11: Solana Vault Standard - Credit Markets Vault with SAS KYC and oracle-only NAV pricing"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "svs_11"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
modules = ["svs-module-hooks", "svs-fees", "svs-caps", "svs-locks", "svs-rewards"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "metadata"] }
spl-token-2022 = "6.0.0"
spl-token-metadata-interface = "0.5.1"
constant_time_eq = { workspace = true }
blake3 = { workspace = true }
svs-oracle = { path = "../../modules/svs-oracle" }
solana-attestation-service-client = { version = "1.0.9", features = ["anchor"] }
svs-fees = { path = "../../modules/svs-fees", optional = true }
svs-caps = { path = "../../modules/svs-caps", optional = true }
svs-locks = { path = "../../modules/svs-locks", optional = true }
svs-rewards = { path = "../../modules/svs-rewards", optional = true }
svs-module-hooks = { path = "../../modules/svs-module-hooks", optional = true }
