[package]
name = "svs-12"
version = "0.1.0"
description = "SVS-12: Tranched Vault with waterfall yield distribution and loss absorption"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "svs_12"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "metadata"] }
spl-token-2022 = "6.0.0"
spl-token-metadata-interface = "0.5.1"
constant_time_eq = { workspace = true }
blake3 = { workspace = true }
svs-math = { path = "../../modules/svs-math" }
